--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <!-- Assistant Image/Content -->
                     <div class="lg:w-1/2 flex justify-center">
                         <div class="relative">
-                            <img src="images/1745595407550.jpg" alt="Alex Shopping Assistant" class="rounded-2xl shadow-xl w-full max-w-md">
+                            <img src="images/f.png" alt="Alex Shopping Assistant" class="rounded-2xl shadow-xl w-full max-w-md">
                             <div class="absolute -bottom-5 -right-5 bg-white px-4 py-2 rounded-full shadow-md">
                                 <span class="flex items-center">
                                     <span class="relative flex h-3 w-3 mr-2">
@@ -200,33 +200,12 @@
                     
                     <!-- Assistant Description -->
                     <div class="lg:w-1/2">
-                        <h2 class="text-3xl font-bold text-newlify-text mb-4">Meet Alex, Your AI Fashion Assistant</h2>
+                        <h2 class="text-3xl font-bold text-newlify-text mb-4"> Fashion Assistant</h2>
                         <p class="text-lg text-newlify-light mb-6">
-                            Alex is your friendly, human-like chatbot designed to chat with you just like a personal stylist. With cheerful greetings and a warm, conversational tone, Alex offers style advice, helps you find products, and answers questions about your orders. Think of Alex as your virtual shopping companion, using casual language (and the occasional emoji 😊) to make your experience fun and engaging.
+                            Our Virtual Assistant provides quick support whenever you need it. The Virtual Assistant focuses on efficiency and clarity. It’s available 24/7 to provide instant answers and step-by-step assistance, ensuring you get reliable support without any confusion.
+
                         </p>
-                        <div class="space-y-4 mb-8">
-                            <div class="flex items-start">
-                                <svg class="h-6 w-6 text-newlify-primary mr-3 mt-1 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
-                                </svg>
-                                <p>Personalized style advice</p>
-                            </div>
-                            <div class="flex items-start">
-                                <svg class="h-6 w-6 text-newlify-primary mr-3 mt-1 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
-                                </svg>
-                                <p>Help finding the perfect products</p>
-                            </div>
-                            <div class="flex items-start">
-                                <svg class="h-6 w-6 text-newlify-primary mr-3 mt-1 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
-                                </svg>
-                                <p>Support with orders and questions</p>
-                            </div>
-                        </div>
-                        <a href="./singup.html" class="cta-button inline-block bg-indigo-600 text-white px-6 py-3 rounded-full font-semibold hover:bg-indigo-700">
-                           <span class="text-white">Chat with Alex</span>
-                        </a>
+                       
                     </div>
                 </div>
             </div>
