--- a/Cards.html
+++ b/Cards.html
@@ -105,6 +105,60 @@
     </div>
 </header>
 
+
+
+  <style>
+    /* Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f5f6fa;
+    }
+
+    /* Main floating survey button */
+    #myDiv {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      background: linear-gradient(135deg, #ff6b6b, #ff4757);
+      color: white;
+      padding: 15px 20px;
+      border-radius: 30px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+      font-size: 16px;
+      font-weight: 600;
+      text-decoration: none;
+      transition: all 0.3s ease;
+      z-index: 9999;
+    }
+
+    #myDiv:hover {
+      background: linear-gradient(135deg, #ff7f7f, #ff5e5e);
+      transform: translateY(-2px);
+      box-shadow: 0 12px 20px rgba(0, 0, 0, 0.25);
+    }
+
+    /* Optional container spacing */
+    .main {
+      padding: 100px 20px;
+    }
+  </style>
+
+
+  <div class="main">
+    <div class="hero">
+      <a id="myDiv" href="https://edhec.az1.qualtrics.com/jfe/form/SV_8nNcvHElh1wbELY" target="_blank">📋 Take Survey</a>
+    </div>
+  </div>
+
+  
+
+
   <main class="container mx-auto px-4 md:px-6 pt-24 pb-12">
     <div class="flex items-center justify-between mb-8">
       <h2 class="text-3xl font-bold text-newlify-text">Your Shopping Cart</h2>
